[project]
name = "wendler531"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.4",
    "pint>=0.24.4",
    "plotly>=6.0.1",
    "streamlit>=1.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
